--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="google_maps_key">AIzaSyBPNHLvyxBAgl1kkbSR_ax9BY6vPnADn_s</string>
+
 </resources>
